k8s-prod/namespace.yaml
# Creates a separated namespace for production resources.
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-prod
